bug 1490727: Replace visually-hidden w/ offscreen
Replace the new class visually-hidden with the poorly named offscreen
class (there is also a visually-hidden mixin, so not the first time
someone was confused).

--- a/kuma/static/styles/base/utilities.scss
+++ b/kuma/static/styles/base/utilities.scss
@@ -2,6 +2,7 @@
 Utility classes
 ********************************************************************** */
 
+/* Visually hidden but still read out by screen readers. */
 .offscreen {
     @extend %offscreen-placeholder;
 }
@@ -177,15 +178,4 @@ Utility classes
 
 .light-grey-background {
     background-color: $grey-light;
-}
-
-/* Visually hidden but still read out by screen readers. */
-.visually-hidden {
-    border: 0;
-    clip: rect(1px, 1px, 1px, 1px);
-    height: 1px;
-    overflow: hidden;
-    padding: 0;
-    position: absolute;
-    width: 1px;
 }
